# mkdocs_plantuml

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  plantuml  pyproject.toml
.github/workflows/: docker-image.yml
