[tool.poetry]
name = "mkdocs_plantuml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.0"
mkdocs-deploy-confluence = { git = "https://github.com/bastianh/mkdocs_deploy_confluence.git", rev = "d118aa8" }
#mkdocs_deploy_confluence = { path = "../mkdocs_deploy_confluence", develop = true }
mkdocs-build-plantuml-plugin = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
